edit api /user/:id/score menjadi /score
id user yang sebelumnya diambil dari params / url sekarang diambil dari id user login
